--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,11 @@ artifact
 .vscode
 # C extensions
 *.so
-
+prediction
+saved_models
+logs
+artifacts
+raw_data
 # Distribution / packaging
 .Python
 build/
